--- a/HTML/헝거게임메인.html
+++ b/HTML/헝거게임메인.html
@@ -79,7 +79,7 @@
                 <img src="../이미지/폴리스라인.png" alt="폴리스라인" class="police-line">
                 <h1 class="title-text">소스코드, 오류 제보, 기여, 기타 등등</h1>
             </div>
-            버그 제보는 <a href="https://discord.com/channels/1320904843904155648/1320904843904155651">KH-KDS 디스코드</a>에서 하실 수 있습니다. 전용 디스코드 서버에서 관리자를 멘션하여 제보해 주십시오.
+            버그 제보는 <a href="https://discord.gg/c3CdxBM2gX">종합 게임 멀티플레이 서버</a>에서 하실 수 있습니다. 전용 디스코드 서버에서 관리자를 멘션하여 제보해 주십시오.
             <br><br>
             또한 <a href="https://github.com/KDaeSeong/DSWorkspace">깃허브</a>에도 제보하실 수 있습니다.
             <br><br>
