--- a/HTML/헝거게임게임화면.html
+++ b/HTML/헝거게임게임화면.html
@@ -12,6 +12,10 @@
     <main>
         <header>
             <div id="day-night-display">
+                <div class="day-gradient">
+                <div class="night-gradient">
+
+                </div>
                 <h1>참가 플레이어</h1>
             </div>
         </header>
