--- a/HTML/헝거게임이벤트.html
+++ b/HTML/헝거게임이벤트.html
@@ -48,16 +48,15 @@
             <h1 class="title-text">이벤트</h1>
         </div>
         <div>
-            <!-- <h1>개요</h1> -->
-            <pre>
+            <div class="mainText">
                     이곳에서는 이벤트를 추가/제거할 수 있습니다.
-
+                    <br><br>
                     이벤트는 낮/밤을 기준으로 나뉘며 낮/밤 전체에 발동하는 이벤트를 만들 수도 있습니다.
-
+                    <br><br>
                     플레이어 번호는 0번부터 시작하여 1씩 증가합니다.
 
 
-            </pre>
+            </div>
         </div>
         
         <div>
