--- a/HTML/헝거게임캐릭터상세.html
+++ b/HTML/헝거게임캐릭터상세.html
@@ -48,18 +48,15 @@
             <h1 class="title-text">캐릭터 상세 설정</h1>
         </div>
         <div>
-            <!-- <h1>개요</h1> -->
-            <pre>
+            <div class="mainText">
                     이곳에서는 캐릭터의 상세 능력치를 설정할 수 있습니다.
-
-
-            </pre>
+            </div>
         </div>
         
         <div>
             <div class="police-container">
-                <img src="../이미지/폴리스라인.png" alt="폴리스라인" class="police-line">
-                <h1 class="title-text">캐릭터 상세 설정</h1>
+                <!-- <img src="../이미지/폴리스라인.png" alt="폴리스라인" class="police-line">
+                <h1 class="title-text">캐릭터 상세 설정</h1> -->
             </div>
 
         </div>
