--- a/HTML/헝거게임보정치.html
+++ b/HTML/헝거게임보정치.html
@@ -49,13 +49,11 @@
         </div>
         <div>
             <!-- <h1>개요</h1> -->
-            <pre id="outline">
-이곳에서는 캐릭터의 속성과 이벤트 보정치를 설정할 수 있습니다.
-                
-
-
-보정치에 따라 생존 확률이 달라지니 신중하게 보정치를 정하세요.
-            </pre>
+            <div class="mainText">
+                이곳에서는 캐릭터의 속성과 이벤트 보정치를 설정할 수 있습니다.
+                <br><br>
+                보정치에 따라 생존 확률이 달라지니 신중하게 보정치를 정하세요.
+            </div>
         </div>
         <div class="police-container">
             <img src="../이미지/폴리스라인.png" alt="폴리스라인" class="police-line">
