--- a/HTML/헝거게임캐릭터.html
+++ b/HTML/헝거게임캐릭터.html
@@ -34,14 +34,13 @@
             <h1 class="title-text">캐릭터</h1>
         </div>
         <div>
-            <!-- <h1>개요</h1> -->
-            <pre>
+            <div class="mainText">
                 이곳에서는 캐릭터를 추가하고 캐릭터의 속성을 설정할 수 있습니다.
-
+                <br><br>
                 캐릭터의 속성은 이벤트 보정치에 영향을 미칩니다.
-
+                <br><br>
                 예를 들어 여성 캐릭터의 경우 남성 캐릭터에 비해 근력 보정을 덜 받습니다. 반면 손재주 보정은 남성 캐릭터에 비해 더 받습니다.
-            </pre>
+            </div>
         </div>
         <div class="police-container">
             <img src="../이미지/폴리스라인.png" alt="폴리스라인" class="police-line">
