--- a/HTML/ERCharacters.html
+++ b/HTML/ERCharacters.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>헝거게임캐릭터</title>
+    <title>ERCharacters</title>
     <link href="https://hangeul.pstatic.net/hangeul_static/css/nanum-square.css" rel="stylesheet">
-    <link rel="stylesheet" href="../CSS/헝거게임캐릭터.css">
+    <link rel="stylesheet" href="../CSS/ERCharacters.css">
 </head>
 <body>
     <main>
@@ -13,13 +13,13 @@
             <section id="header-id1">
                 <ul>
                     <li><a href="#">
-                        <img src="../이미지/헝거게임.webp" alt="" width="40%">
+                        <img src="../Images/ERLogo.webp" alt="" width="40%">
                     </a></li>
-                    <li><a href="헝거게임메인.html">메인</a></li>
-                    <li><a href="헝거게임캐릭터.html" id="ERChar">캐릭터 설정</a></li>
-                    <li><a href="헝거게임캐릭터상세.html" id="settingCharDetail">캐릭터 상세설정</a></li>
-                    <li><a href="헝거게임이벤트.html">이벤트 설정</a></li>
-                    <li><a href="헝거게임보정치.html">보정치 설정</a></li>
+                    <li><a href="ERMain.html">메인</a></li>
+                    <li><a href="ERCharacters.html" id="ERChar">캐릭터 설정</a></li>
+                    <li><a href="ERCharDetails.html" id="settingCharDetail">캐릭터 상세설정</a></li>
+                    <li><a href="EREvents.html">이벤트 설정</a></li>
+                    <li><a href="ERModifiers.html">보정치 설정</a></li>
                 </ul>
                 <ul>
                 </ul>
@@ -30,7 +30,7 @@
             </section>
         </header>
         <div class="police-container">
-            <img src="../이미지/폴리스라인.png" alt="폴리스라인" class="police-line">
+            <img src="../Images/PoliceLine.png" alt="PoliceLine" class="police-line">
             <h1 class="title-text">캐릭터</h1>
         </div>
         <div>
@@ -43,7 +43,7 @@
             </div>
         </div>
         <div class="police-container">
-            <img src="../이미지/폴리스라인.png" alt="폴리스라인" class="police-line">
+            <img src="../Images/PoliceLine.png" alt="PoliceLine" class="police-line">
             <h1 class="title-text">캐릭터 추가 및 수정, 삭제</h1>
         </div>
         <div id="addCharacter">
@@ -81,7 +81,7 @@
         </div>
     </main>
 
-    <script src="../JS/헝거게임캐릭터.js"></script>
+    <script src="../JS/ERCharacters.js"></script>
 
 </body>
 </html>
