--- a/HTML/ERGameDisplay.html
+++ b/HTML/ERGameDisplay.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>헝거게임게임화면</title>
+    <title>ERGameDisplay</title>
     <link href="https://hangeul.pstatic.net/hangeul_static/css/nanum-square.css" rel="stylesheet">
-    <link rel="stylesheet" href="../CSS/헝거게임게임화면.css">
+    <link rel="stylesheet" href="../CSS/ERGameDisplay.css">
 </head>
 <body>
-    <img class="background-image" src="../이미지/이리 맵.webp" alt="배경 이미지">
+    <img class="background-image" src="../Images/ERMap.webp" alt="배경 이미지">
     <main>
         <header>
             <div id="day-night-display">
@@ -38,7 +38,7 @@
         </div>
     </main>
     
-    <script src="../JS/헝거게임게임화면.js"></script>
+    <script src="../JS/ERGameDisplay.js"></script>
     
 </body>
 </html>
