--- a/HTML/ERMyProfile.html
+++ b/HTML/ERMyProfile.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>헝거게임 내정보</title>
+    <title>ERMyProfile</title>
     <link href="https://hangeul.pstatic.net/hangeul_static/css/nanum-square.css" rel="stylesheet">
-    <link rel="stylesheet" href="../CSS/헝거게임내정보.css">
+    <link rel="stylesheet" href="../CSS/ERMyProfile.css">
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
     <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <script>
@@ -51,13 +51,13 @@
             <section id="header-id1">
                 <ul>
                     <li><a href="#">
-                        <img src="../이미지/헝거게임.webp" alt="" width="40%">
+                        <img src="../Images/ERLogo.webp" alt="" width="40%">
                     </a></li>
-                    <li ><a href="헝거게임메인.html">메인</a></li>
-                    <li><a href="헝거게임캐릭터.html">캐릭터 설정</a></li>
-                    <li><a href="헝거게임캐릭터상세.html" id="settingCharDetail">캐릭터 상세설정</a></li>
-                    <li><a href="헝거게임이벤트.html">이벤트 설정</a></li>
-                    <li><a href="헝거게임보정치.html">보정치 설정</a></li>
+                    <li ><a href="ERMain.html">메인</a></li>
+                    <li><a href="ERCharacters.html">캐릭터 설정</a></li>
+                    <li><a href="ERCharDetails.html" id="settingCharDetail">캐릭터 상세설정</a></li>
+                    <li><a href="EREvents.html">이벤트 설정</a></li>
+                    <li><a href="ERModifiers.html">보정치 설정</a></li>
                 </ul>
                 <ul>
                 </ul>
@@ -136,7 +136,7 @@
         </div>
     </main>
 
-    <script src="../JS/헝거게임내정보.js"></script>
+    <script src="../JS/ERMyProfile.js"></script>
     <script>
         // 팝업 열기
         function openModifyPopup() {
