--- a/HTML/ERModifiers.html
+++ b/HTML/ERModifiers.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>헝거게임보정치</title>
+    <title>ERModifiers</title>
     <link href="https://hangeul.pstatic.net/hangeul_static/css/nanum-square.css" rel="stylesheet">
-    <link rel="stylesheet" href="../CSS/헝거게임보정치.css">
+    <link rel="stylesheet" href="../CSS/ERModifiers.css">
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             const loginCheck = localStorage.getItem('loginCheck') === "true";
@@ -27,13 +27,13 @@
             <section id="header-id1">
                 <ul>
                     <li><a href="#">
-                        <img src="../이미지/헝거게임.webp" alt="" width="40%">
+                        <img src="../Images/ERLogo.webp" alt="" width="40%">
                     </a></li>
-                    <li><a href="헝거게임메인.html">메인</a></li>
-                    <li><a href="헝거게임캐릭터.html">캐릭터 설정</a></li>
-                    <li><a href="헝거게임캐릭터상세.html" id="settingCharDetail">캐릭터 상세설정</a></li>
-                    <li><a href="헝거게임이벤트.html">이벤트 설정</a></li>
-                    <li><a href="헝거게임보정치.html" id="ERModifier">보정치 설정</a></li>
+                    <li><a href="ERMain.html">메인</a></li>
+                    <li><a href="ERCharacters.html">캐릭터 설정</a></li>
+                    <li><a href="ERCharDetails.html" id="settingCharDetail">캐릭터 상세설정</a></li>
+                    <li><a href="EREvents.html">이벤트 설정</a></li>
+                    <li><a href="ERModifiers.html" id="ERModifier">보정치 설정</a></li>
                 </ul>
                 <ul>
                 </ul>
@@ -44,7 +44,7 @@
             </section>
         </header>
         <div class="police-container">
-            <img src="../이미지/폴리스라인.png" alt="폴리스라인" class="police-line">
+            <img src="../Images/PoliceLine.png" alt="PoliceLine" class="police-line">
             <h1 class="title-text">보정치</h1>
         </div>
         <div>
@@ -56,7 +56,7 @@
             </div>
         </div>
         <div class="police-container">
-            <img src="../이미지/폴리스라인.png" alt="폴리스라인" class="police-line">
+            <img src="../Images/PoliceLine.png" alt="PoliceLine" class="police-line">
             <h1 class="title-text">보정치 수정</h1>
         </div>
         <div id="modifierTable">
@@ -150,6 +150,6 @@
         </div>
     </main>
 
-    <script src="../JS/헝거게임보정치.js"></script>
+    <script src="../JS/ERModifiers.js"></script>
 </body>
 </html>
