--- a/HTML/ERCharDetails.html
+++ b/HTML/ERCharDetails.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EREvents</title>
+    <title>ERCharDetails</title>
     <link href="https://hangeul.pstatic.net/hangeul_static/css/nanum-square.css" rel="stylesheet">
     <link rel="stylesheet" href="../CSS/ERCharDetails.css">
     <script>
