헝거게임 커밋

--- a/HTML/EREvents.html
+++ b/HTML/EREvents.html
@@ -99,8 +99,8 @@
                     <label for="popupHeal">체력 회복:</label>
                     <input type="checkbox" id="popupHeal"><br><br>
             
-                    <label for="popupHealTarget">이로운 효과 대상자:</label><br>
-                    <input type="text" id="popupHealTarget" class="short-input"><br><br>
+                    <label for="popupbenefitTarget">이로운 효과 대상자:</label><br>
+                    <input type="text" id="popupbenefitTarget" class="short-input"><br><br>
             
                     <label for="popupDayNight">조건:</label><br>
                     <select id="popupDayNight" class="short-select">
